# pneumatic_book

./: .TODO  .editorconfig  .gitmodules  404.html  README.md  Readme.md  bibliografia.html  bibliografia.md  circuitos.html  circuitos.md  cuestionario2.html  cuestionario2.md  ejercicios1.html  ejercicios1.md  ejerciciosga.md  ga_ejercicios.html  ga_ejercicios.md  glosario.md  index.html  index.md  index2.html  index2.md  index3.html  index3.md  index4.html  index4.md  material_neu.html  material_neu.md  mkdocs.yml  problema2GA.html  problema2GA.md  problemario3GA.html  problemario3GA.md  pyproject.toml  sitemap.xml  style.css
.github/workflows/: ghpages.yml
bibliografia/: index.html
capitulo1/: index.html
capitulo1/ejercicios1/: index.html
capitulo1/mini-test/: index.html
capitulo2/: index.html
capitulo2/ejercicios2/: index.html
capitulo2/mini-test/: index.html
capitulo2/video/: index.html
capitulo3/: index.html
capitulo3/video/: index.html
capitulo4/: index.html
capitulo4/ejercicios4/: index.html
capitulo4/mini-test/: index.html
capitulo4/video/: index.html
capitulo5/: index.html  sec_1.webm
capitulo6/: index.html
capitulo6/cuestionario/: index.html
capitulo6/ejercicios/: index.html
docs/: README.md  bibliografia.md  index.md
docs/capitulo1/: ejercicios1.md  index.md  mini-test.md
docs/capitulo2/: ejercicios2.md  index.md  mini-test.md  video.md
docs/capitulo3/: index.md  video.md
docs/capitulo4/: ejercicios4.md  index.md  mini-test.md  video.md
javascripts/: mathjax.js
recursos/: index.html
search/: search_index.json
(+8 files in other folders)
