[tool.poetry]
name = "pneumatic-book"
version = "0.1.0"
description = ""
authors = ["jalmx <jalm_x@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
mkdocs-material = "^9.5.33"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
